; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_main.c_set_sign.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_main.c_set_sign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_sign(i32 %0, i32 %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @chunked(i32 %13)
  store i32 %14, i32* %11, align 4
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @chunked(i32 %15)
  store i32 %16, i32* %12, align 4
  %17 = load i32, i32* %11, align 4
  %18 = load i32, i32* %12, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* %9, align 4
  %23 = load i8*, i8** %10, align 8
  %24 = call i32 @_set_sign(i32 %17, i32 %18, i32 %19, i32 %20, i32 %21, i32 %22, i8* %23, i32 1)
  %25 = load i32, i32* %6, align 4
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %9, align 4
  %29 = load i8*, i8** %10, align 8
  %30 = call i32 @client_sign(i32 %25, i32 %26, i32 %27, i32 %28, i8* %29)
  ret void
}

declare dso_local i32 @chunked(i32) #1

declare dso_local i32 @_set_sign(i32, i32, i32, i32, i32, i32, i8*, i32) #1

declare dso_local i32 @client_sign(i32, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
